--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -15,14 +15,14 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
       background: linear-gradient(135deg, #0f0f23 0%, #1a1a2e 100%);
       color: #e0e0e0;
-      height: 100vh;
-      overflow: hidden;
+      min-height: 100vh;
+      overflow-y: auto;
     }
 
     .container {
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      min-height: 100vh;
       padding: 40px;
     }
 
@@ -54,9 +54,11 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-      padding: 20px;
+      padding: 20px 20px 60px 20px;
+      overflow-y: auto;
+      max-height: calc(100vh - 200px);
     }
 
     .screen {
@@ -64,6 +66,7 @@
       width: 100%;
       max-width: 600px;
       animation: fadeIn 0.3s;
+      padding-bottom: 40px;
     }
 
     .screen.active {
